# c3d_auth

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  correct_public.pem  wrong_public.pem
include/: c3d_auth.h
src/: c3d_auth.cpp  main.cpp
tests/: test_auth.cpp
